fix a bug where navigation buttons didn't work at all on firefox

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,14 +1,13 @@
-@import 'normalize';
-@import 'sizing';
-@import 'node_modules/perfundo/scss/with-icons.scss';
+@import "normalize";
+@import "sizing";
+@import "node_modules/perfundo/scss/with-icons.scss";
 
-$sans-serif: 'Open Sans',sans-serif;
-$serif: 'Merriweather',serif;
+$sans-serif: "Open Sans", sans-serif;
+$serif: "Merriweather", serif;
 $orange: #f05f40;
 $orange-9: #f06040e3;
 $gray: #212529;
-$light-gray : #6c757d;
-
+$light-gray: #6c757d;
 
 html {
   scroll-behavior: smooth;
@@ -78,8 +77,9 @@ html {
   background-color: darken($color: $orange, $amount: 5%);
 }
 
-.page__button:active, .page__button:focus {
-  box-shadow: 0 0 0 .2rem rgba(240,95,64,.5);
+.page__button:active,
+.page__button:focus {
+  box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5);
   outline: 0;
 }
 
@@ -91,12 +91,15 @@ html {
   background-color: darken($color: white, $amount: 10%);
 }
 
-.page__button--white-background:active, .page__button--white-background:focus {
-  box-shadow: 0 0 0 0.2rem rgba(248,249,250,.5);
+.page__button--white-background:active,
+.page__button--white-background:focus {
+  box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
   outline: 0;
 }
 
-.button__a.page__text--gray, .page__text--gray, .button__a.page__text--gray:visited {
+.button__a.page__text--gray,
+.page__text--gray,
+.button__a.page__text--gray:visited {
   color: $gray;
 }
 
@@ -113,7 +116,7 @@ html {
 }
 
 .page__p--faded {
-  color: rgba(255,255,255,0.7);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .page__title {
@@ -169,7 +172,7 @@ html {
   height: 39px;
   border: 1px solid #e5e5e5;
   border-radius: 0.25rem;
-  background: center 0px no-repeat url('../assets/hamburger.svg');
+  background: center 0px no-repeat url("../assets/hamburger.svg");
   background-size: 45px 45px;
   cursor: pointer;
 }
@@ -190,7 +193,8 @@ html {
   transition-timing-function: ease-out;
 }
 
-.nav__li, .nav__li:visited {
+.nav__li,
+.nav__li:visited {
   display: block;
   text-decoration: none;
   color: $gray;
@@ -212,7 +216,6 @@ html {
 .button__a {
   text-decoration: none;
   color: white;
-  display: block;
   padding: 1rem 2rem;
 }
 
@@ -230,7 +233,7 @@ html {
 }
 
 .header {
-  background: center no-repeat url('../assets/header.jpg');
+  background: center no-repeat url("../assets/header.jpg");
   background-size: cover;
   padding: 10rem 0 calc(10rem - 55px) 0;
 }
@@ -257,41 +260,41 @@ html {
   margin-top: 3rem;
 }
 
-.section__icon--phone{
-  background: center 0px no-repeat url('../assets/phone.svg');
+.section__icon--phone {
+  background: center 0px no-repeat url("../assets/phone.svg");
   background-size: cover;
 }
 
-.section__icon--email{
-  background: center 0px no-repeat url('../assets/email.svg');
+.section__icon--email {
+  background: center 0px no-repeat url("../assets/email.svg");
   background-size: cover;
   text-decoration: none;
   color: $gray;
 }
 
-.section__icon--diamond{
-  background: center 0px no-repeat url('../assets/diamond.svg');
+.section__icon--diamond {
+  background: center 0px no-repeat url("../assets/diamond.svg");
   background-size: cover;
   text-decoration: none;
   color: $gray;
 }
 
 .section__icon--plane {
-  background: center 0px no-repeat url('../assets/plane.svg');
+  background: center 0px no-repeat url("../assets/plane.svg");
   background-size: cover;
   text-decoration: none;
   color: $gray;
 }
 
 .section__icon--markup {
-  background: center 0px no-repeat url('../assets/markup.svg');
+  background: center 0px no-repeat url("../assets/markup.svg");
   background-size: cover;
   text-decoration: none;
   color: $gray;
 }
 
 .section__icon--heart {
-  background: center 0px no-repeat url('../assets/heart.svg');
+  background: center 0px no-repeat url("../assets/heart.svg");
   background-size: cover;
   text-decoration: none;
   color: $gray;
@@ -418,7 +421,6 @@ html {
   animation-name: bounceIn;
 }
 
-
 @media (min-width: 576px) {
   .page__flex-container--row {
     flex-direction: row;
@@ -429,7 +431,6 @@ html {
     max-width: 50%;
   }
 }
-
 
 @media (min-width: 768px) {
   .page .page__container-responsive {
@@ -444,10 +445,7 @@ html {
   .page .page__p--large-header {
     font-size: 1.15rem;
   }
-
-  
 }
-
 
 @media (min-width: 992px) {
   .page .page__container-responsive {
@@ -462,7 +460,6 @@ html {
 
   .page .page__container-responsive--align-start {
     align-items: flex-start;
-
   }
 
   .page__flex-div--width {
@@ -492,11 +489,13 @@ html {
     display: none;
   }
 
-  .nav__logo--no-color,  .nav .nav__li--no-color{
-    color: rgba(255,255,255,0.7);
+  .nav__logo--no-color,
+  .nav .nav__li--no-color {
+    color: rgba(255, 255, 255, 0.7);
   }
 
-  .nav__logo--no-color:hover, .nav .nav__li--no-color:hover {
+  .nav__logo--no-color:hover,
+  .nav .nav__li--no-color:hover {
     color: white;
     transition: all 0.3s;
   }
@@ -525,7 +524,6 @@ html {
     margin-top: 2.5rem;
   }
 }
-
 
 @media (min-width: 1200px) {
   .page .page__container-responsive {
